src/core-crm/objects/QTAC_Preference__c/QTAC_Preference__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
    >QTAC_Preference_Compact_Layout</compactLayoutAssignment>
    <label>QTAC Preference</label>
    <nameField>
        <displayFormat>QP-{000000000}</displayFormat>
        <label>QTAC Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QTAC Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>