src/core-crm/objects/QTAC_Preference__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to QTAC Application.</description>
    <label>Application</label>
    <referenceTo>hed__Application__c</referenceTo>
    <relationshipLabel>QTAC Preferences</relationshipLabel>
    <relationshipName>QTAC_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>