src/core-crm/objects/QTAC_Preference__c/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <description>Used for data migration  data movement framework.</description>
    <label>Migration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>