src/core-crm/objects/QTAC_Preference__c/fields/Offer_Exists__c.field-meta.xml
<CustomField>
    <fullName>Offer_Exists__c</fullName>
    <description>Whether an offer exists for this preference.</description>
    <label>Offer Exists</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>