src/core-crm/objects/QTAC_Preference__c/fields/Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status__c</fullName>
    <description>The states which offer can be in.</description>
    <label>Offer Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>