src/core-crm/objects/QTAC_Preference__c/fields/Preference_Number__c.field-meta.xml
<CustomField>
    <fullName>Preference_Number__c</fullName>
    <description>The preference order assigned to the QTAC program by applicant.</description>
    <label>Preference Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>