src/core-crm/objects/QTAC_Preference__c/fields/QTAC_Faculty__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Faculty__c</fullName>
    <description>The Faculty that owns and administers the course in preference.</description>
    <label>QTAC Faculty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>