src/core-crm/objects/QTAC_Preference__c/fields/QTAC_Offer_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Offer_Start_Date__c</fullName>
    <description>At conclusion of assessment an offer is create for the applied study. The offer is active from Offer Start Date.</description>
    <label>QTAC Offer Start Date</label>
    <type>Date</type>
</CustomField>