src/core-crm/objects/QTAC_Preference__c/fields/QTAC_Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Offer_Status__c</fullName>
    <description>The states which Offer can be in eg offered, Accepted, Declined, Rescinded etc</description>
    <label>QTAC Offer Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>