src/core-crm/objects/QTAC_Preference__c/fields/QTAC_Offer_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Offer_Status_Date__c</fullName>
    <description>The date the offer status has come to effect in application source system.</description>
    <label>QTAC Offer Status Date</label>
    <type>Date</type>
</CustomField>