src/core-crm/objects/QTAC_Preference__c/fields/QTAC_Preference_Number__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Preference_Number__c</fullName>
    <description>The preference order assigned to the QTAC program by applicant.</description>
    <label>QTAC Preference Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>