src/core-crm/objects/QTAC_Preference__c/fields/QTAC_Program_ID__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Program_ID__c</fullName>
    <description>The identifier assigned to the course by QTAC.</description>
    <label>QTAC Program ID</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>