src/core-crm/objects/QTAC_Preference__c/fields/QTAC_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Program_Name__c</fullName>
    <description>The name given to the course by QTAC.</description>
    <label>QTAC Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>